# ordito

./: .env  DATA_STRUCTURES.md  README.md  REQUIREMENTS.md  components.json  index.html  package.json  pnpm-lock.yaml  requirements.md  snapcraft.yaml  todo.md  tsconfig.json  vite.config.ts
.github/actions/: build-release.yml  generate-updater.yml
.github/actions/build-release/: action.yml
.github/actions/generate-updater/: action.yml
.github/scripts/: download-assets.sh  generate-updater.js  get-release-info.sh  upload-and-publish.sh  validate-json.sh
.github/workflows/: build-snap.yml  build.yml  linux-release.yml  official-build.yml  release.yml  snap.yml  snapcraft.yml  test-release.yml  test.yaml
docs/: frontend.md
landing/: index.html
scripts/: sync-version.js
snap/: snapcraft.yaml
src/: main.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  ordito-commands-2025-05-31.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  notification.rs  scheduler.rs  services.rs  startup.rs  state.rs  storage.rs  tray.rs  utils.rs  window.rs
src-tauri/src/app/: commands.rs  error.rs  execution.rs  mod.rs  scheduler.rs  state.rs
src-tauri/src/commands/: command.rs  execute.rs  group.rs  mod.rs  schedule.rs  startup.rs  tray.rs
src-tauri/src/core/: mod.rs  scheduler.rs  storage.rs
src-tauri/src/db/: command.rs  command_group.rs  command_log.rs  command_schedule.rs  mod.rs  utils.rs
src-tauri/src/domain/: command.rs  command_group.rs  command_log.rs  command_schedule.rs  mod.rs
src-tauri/src/io/: log_storage.rs  mod.rs
src-tauri/src/services/: command_service.rs  executor_service.rs  notification_service.rs  scheduler_service.rs
src-tauri/src/system/: mod.rs  notification.rs  tray.rs  window.rs
src-tauri/tests/: validation_tests.rs
src/app/: groups.tsx  header.tsx  index.tsx
src/app/groups/: group-actions.tsx  index.tsx  item.tsx
src/components/: command-editor.tsx  commands-view.tsx  execution-log.tsx  export-import.tsx  schedule-view.tsx  search-input.tsx  theme-btn.tsx  theme-watcher.tsx  updater.tsx
src/components/command/: command-actions.tsx  command-card.tsx  command-form.tsx  command-grid.tsx  command-status.tsx
src/components/common/: state-wrapper.tsx
src/components/cron-builder/: field-selector.tsx  index.tsx  multi-select-field.tsx  types.ts
src/components/features/: command-palette.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/fields/: index.ts  input-action-wrapper.tsx  input-field.tsx  select-field.tsx  switch-field.tsx  tab-field.tsx  textarea-field.tsx  types.ts
src/config/: brand.ts
src/context/: hooks.ts  index.tsx  type.ts
src/hooks/: use-commands.ts  use-execution-events.ts  use-execution.ts  use-folders.ts  use-keyboard-shortcuts.ts  use-masonry.ts  use-modal.tsx  use-settings.ts  use-websocket.ts
src/layout/: config.ts  index.tsx
src/lib/: constants.ts  dummy-data.ts  tauri.ts  utils.ts
src/router/: paths.ts
src/schemas/: command.schema.ts  group.schema.ts  index.ts  log.schema.ts  query-params.schema.ts  schedule.schema.ts
src/services/: api.ts  notifications.ts
src/store/: command-store.ts  config.ts  execution-store.ts  folder-store.ts  hooks.ts  index.ts  provider.tsx  settings-store.ts  types.ts
src/stores/: app.ts  commands.ts  executions.ts  index.ts  schedules.ts
src/styles/: animation.css  colors.css  index.css
src/types/: api.ts  command.ts  execution.ts  folder.ts  index.ts  schedule.ts  settings.ts
src/utils/: clipboard.ts
src/views/: index.tsx
(+139 files in other folders)
