[package]
name = "ordito"
version = "0.1.0"
description = "Cross-platform desktop application for command execution and management"
authors = ["Ordito Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.0"

[lib]
name = "ordito_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["tray-icon"] }
tauri-plugin-opener = "2.5"
tauri-plugin-notification = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-os = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
cron = "0.15"
chrono-tz = "0.10"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6.0"
async-trait = "0.1"

# Performance optimizations
[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link Time Optimization
codegen-units = 1      # Better optimization at cost of compile time
strip = true           # Remove debug symbols
panic = "abort"        # Smaller binary size

[profile.dev]
opt-level = 1          # Some optimization for faster dev builds

# Optimize dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

