[package]
name = "ordito"
version = "1.1.4"
description = "A powerful desktop application for organizing and executing commands from a convenient system tray interface"
authors = ["tonmoydeb404 <tonmoydeb404@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tonmoydeb404/ordito"
homepage = "https://github.com/tonmoydeb404/ordito"
keywords = ["tauri", "desktop", "commands", "tray", "automation"]
categories = ["command-line-utilities", "development-tools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = {version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
tauri-plugin-notification = "2"
cron = "0.15.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
